2008-04-13
-XML Schema Definition (XSD) instead of Document Type Definition (DTD)


2008-04-06
-EF_Application_Identification: fixed XML output of card application type
-CardActivityDailyRecord: XML output changes
-ControlType: XML output fix
-C_Driver_Card.dtd: added changes of EF_Application_Identification,
 CardActivityDailyRecord and ControlType XML output


2008-03-31
-DDDDataSource: file type (card, vehicle unit) is guessed with
 file magic in addition to file name prefix (C_, M_)


2008-03-30
-only output records that contain useful data
-decoder for ISO-8859-<codepage> encoded strings in DataClass
 this affects: Address, Name, VehicleRegistrationNumber
-environment variable NODETAILEDSPEED to suppress output of
 detailed speed data in XML output


2008-03-27
-times in UTC: TimeReal, CardActivityDailyRecord
-simple date format (UTC) for times in XML dump now
 yyyy-MM-dd HH:mm:ss z


2008-03-25
-extended debug information


2008-03-22
-bug fixes
-more extended debug information


2008-03-18
-DTD files updates


2008-03-12
-more extended debug information


2008-03-09
-bug fixes, more extended infos


2008-03-06
-small changes


2008-03-05
-misc small changes


2008-03-02
-bug fixes


2008-02-27
-new class:
 -DailyPresenceCounter


2008-02-25
-don't dump XML if there was a problem with certificates/data/signatures


2008-02-24
-debug logger added


2008-02-22
-C_Driver_Card.dtd fixes
-M_Vehicle_Unit.dtd


2008-02-20
-bug fixes


2008-02-19
-size attribute added for most classes


2008-02-18
-Javadoc update
-fixed XML output of some OCTET STRING elements


2008-02-17
-new classes:
 -NoOfCompanyActivityRecords
 -NoOfControlActivityRecords


2008-02-16
-new class:
 -VuTimeAdjustmentRecord


2008-02-15
-new classes:
 -VuFaultData
 -VuFaultRecord
 -VuEventData
 -VuEventRecord
 -VuOverSpeedingEventData
 -VuOverSpeedingEventRecord
 -VuTimeAdjustmentData


2008-02-14
-new classes:
 -ManualInputFlag
 -VuActivityDailyData
 -VuCardIWData
 -VuCardIWRecord